--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,15 @@ header {
   background-color: #e55a00;
 }
 
+.header-actions {
+  display: inline-block;
+  margin-left: 15px;
+}
+
+.mr-2 {
+  margin-right: 8px;
+}
+
 /* 导航样式 */
 nav {
   background-color: white;
